--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,32 @@
+body {
+    background: #F1F1F1;   
+    font: normal 13px arial,sans-serif;
+}
+.button {
+    background-color: #4D90FE;
+    background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed);
+    background-image: -moz-linear-gradient(top,#4d90fe,#4787ed);
+    background-image: -ms-linear-gradient(top,#4d90fe,#4787ed);
+    background-image: -o-linear-gradient(top,#4d90fe,#4787ed);
+    background-image: linear-gradient(top,#4d90fe,#4787ed);
+    border: 1px solid #3079ED;
+    color: white;
+}
+.container {
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    cursor: default;
+    font-size: 11px;
+    font-weight: bold;
+    text-align: center;
+    margin-right: 16px;
+    height: 27px;
+    line-height: 27px;
+    min-width: 54px;
+    outline: 0;
+    padding: 0 8px;
+}
 .main {
     width: 440px;
     color: #333;
@@ -24,6 +53,21 @@
 .text {
     width: 50%;
 }
-#jenkins-url, #websocket-url {
+.textbox {
+    border: 1px solid #D9D9D9;
+    border-top: 1px solid silver;
+    outline: none;
+}
+.textbox:hover {
+    border: 1px solid #4d90fe;
+    outline: none;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+}
+.textbox:focus {
+    border: 1px solid #4d90fe;
+    outline: none;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+}
+.wide {
     width: 100%;
 }
